--- a/data/Steel Inquisitor.wiki
+++ b/data/Steel Inquisitor.wiki
@@ -8,5 +8,6 @@ resistance: fire
 +9 to hit
 
 20 STR (+5) 1000xp
++7 Athletics
 
 -Can spend 2 rounds of combat to sprout draconic wings and gain a fly speed of 50ft
