--- a/data/Luthadel.wiki
+++ b/data/Luthadel.wiki
@@ -35,7 +35,7 @@ city square
     -weenie: [Execution of Quaal]
 ++++Temple of the [Order of Steel]   
     -main one by the God King's Palace where [Head Bishop Skarjun] resides
-        -underneath the stone slab floor, buried for centuries is a 20ft by 20ft red cube portal to the [Acheron] realm.
+        -underneath the stone slab floor, buried for centuries is a 20ft by 20ft red cube portal to the [Acheron] realm. DC 25 STR to pass through.
         -decorated with imagry of [Venril Sathir]'s subdoing of [Gruumsh], forcing him to stone. 
         -draconic engravings telling the tale of [Venril Sathir] creating a geographical trap of the Ash Mount
 ++++Skaa Temple North
