adding vaprak notes

--- a/data/Vaprak.wiki
+++ b/data/Vaprak.wiki
@@ -1,6 +1,9 @@
 ﻿++ Vaprak
 
-said to be a mix between a troll and an ogre, and was worship equally by both races before exterminated by [Venril Sathir]
+said to be a mix between a troll and an ogre, and was worshipped equally by both races before exterminated by [Venril Sathir]
 
 
-Home Realm, Shatterstone in the [Abyss]
+Home Realm, Shatterstone in the [Abyss], but has spent much of its life in [Acheron] finding against [Gruumsh] and [Kadi] for domination of the realm
+
+
+Use https://i.pinimg.com/originals/97/69/27/976927ce16a9645f84446295760b005c.jpg
