adding group three notes for slaying venril sathir

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -1552,10 +1552,21 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
       -[Vaprak] proceeds to rampage through [Luthadel] attempting to find [Venril Sathir] and destroy him
       
 ++++Session 64
-    Weenie: after destroying the homes of Venril Sathir, Zolis, Stayanoga and Salazar, finally [Venril Sathir] himself will come back, shooting accross the ocean once he feels his restraining grip on [Vaprak] be dispelled. Makes a dynamic entrance by propelling himself at [Vaprak] and using a potent fireball to blast part of him away. Though the fight is intense, Venril Sathir will lose if unaided, releasing in this order: [Gruumsh] (volcanic eruption), 
+    Weenie: after destroying the homes of Venril Sathir, Zolis, Stayanoga and Salazar, finally [Venril Sathir] himself will come back, shooting accross the ocean once he feels his restraining grip on [Vaprak] be dispelled. Makes a green glowing dynamic entrance by propelling himself at [Vaprak] and using a potent fireball to blast part of him away, landing and taking a round to recover from fading haste, which was overused, melting the ring right off of his hand. Though the fight is intense, Venril Sathir will lose if unaided, releasing in this order: [Gruumsh] (volcanic eruption), 
                [Velsharoon] (who takes advantage of all of the corpses in [Luthadel])      
         
-      
+    The group follows [Vaprak] until Venril Sathir shoots accoss the walls to attack [Vaprak]
+      -the group sides with Vaprak and attack Venril Sathir
+      -Venril Sathir is slain by Vaprak
+      -[Maleah] snatches the arms of Venril Sathir that fell to the ground that have rings upon them.
+      -The group follows Vaprak North West until he starts forcing his way through the red cube portal to [Acheron]
+      -With Vaprak gone the group attempts to go back to the boat, but [Koloss] were attempting to break into the city
+      -The group then retreats to [Leeran]'s magic shop, [Callistege] attunes to [Briar]'s Pearl of Power to teleport the group to [Gorda]
+        -the group stocks up on strong potions
+        -[Maleah] identifies the rings from Venril Sathir in the moments she can
+       
+    [Callistege] teleports the group to [Gorda]
+      -the group rests at the Blooming Orchid  
       
         
         
