adding group three notes

--- a/data/Characters.wiki
+++ b/data/Characters.wiki
@@ -23,6 +23,8 @@ Legendary Heroes:
 [Luthadel]
     [Venril Sathir]
     [Quaal]
+    [Callistege]
+    [Matkina]
 
 [Dun Morhen]:
     [Feronia Vie]
