--- a/data/Leeran.wiki
+++ b/data/Leeran.wiki
@@ -31,6 +31,7 @@ Items for Sale:
         -Fine Parchment - 1s per sheet
           -Ink - 10g per ounce
           -Chalk - 1g per piece
+          -Unguent - 10g per ounce
         -Blank spell books - 5g each      
         -Book of Understanding 400g - pg 209   - purchased by good
         -[Sentient Rock Henry] - 50g 10lb      - purchased by good
