add Maleah backstory

--- a/data/Maleah.wiki
+++ b/data/Maleah.wiki
@@ -3,3 +3,5 @@
 is a gnome that was true polymorphed into a goblin for meddling with some high level wizard
 
 knows the [Gorda] and [Luthadel] [Teleportation Circles]
+
+Maleah, when formerly a gnome, lived in the city of [Waterdeep] where she attended the Blackstaff Academy to learn the ways of magic. One fateful day though, when spying on [Vajra Safahr], the Blackstaff of Waterdeep, a gnome who was particularly successful in her mission [Fenthwick], was making a hurried getaway from a scene. Maleah got to see the gnome as they ran off, but inadvertently got mistaken for her as authorities came around. Unfortunately during investigation, [Fenthwick] has planted an item on Maleah that was a personal belonging of [Vajra Safahr], which after trial in court, declared the crime as espianage, [Vajra Safahr] not wanting to have her own student be put to death, instead was able to get a lighter sentence, for Maleah to be true polymorphed and banished to [Gorda], which is used by [Waterdeep] to send criminals to never be seen again.
