--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -1580,4 +1580,27 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
     -The group teleports to Luthadel after pursuading [Callistege] to teleport everyone to [Luthadel]
       -upon going to [Luthadel], the group heads toward the orange glow through the smoke in the north/west portion of town 
         ([Gruumsh]'s path toward the portal cube to [Acheron], which is on fire from volcano lava)
-          
+        
+++++Session 66
+    The group continues north towards the fire, to find the path that [Gruumsh] left behind when traveling to the cube to [Acheron] in the center of [Luthadel]
+    Then travels inward to the red cube again where they find 7 large [Koloss] attempting to force themselves into [Acheron] via the cube.
+      -73 drunks total, 2 died against smaller koloss, 24 against the large koloss
+      -57 drunks still alive
+      
+    Rose from the Blooming Orchid soothes one of the [Koloss] that then [Doot] befriends
+      -[Koloss]'s name is [Tarsun]          
+      -[Doot] requests the [Koloss] to push him into the cube, and succeeds!
+      -[Plosive] chases the Koloss expecting a fight but sees it working with [Doot] instead, and decides to assist.
+      -[Plosive] then later uses a point of inspiration to succeed the check to get into [Acheron]
+         -Also allowing subsequent attempts to use the portal to [Acheron]
+        
+    The group back in the material realm:
+      -[Briar] transforms into a giant ape, which [Maleah] then enlarges to Gargantuan size
+      -[Briar] pushes the cube into the water canal of [Luthadel] in order to push it southward out to sea. 
+         -(don't forget fruit paralasys when moving into the ocean)
+         
+    [Plosive] and [Doot] in [Acheron] with their friend Koloss [Tarsun] manage to rest 8 hours on a cube before it collides with another.
+      -group is given 9500xp for this session + previous       
+      
+++++Session 67
+    Reminders: 8 hours rest in [Acheron] means the material realm folk can do 8 hours worth of actions before the [Acheron] folks wake up       
