adding group three notes

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -27,7 +27,7 @@ XXXXX(August 7th)XX XXXXXXX
 XXXXXXX  XXXXXXX
 XXXXXXX  XXXXXXX 
 
-XXXXXX
+XXXXXXX
 
 [Alas] sends a crate to [Dockson] at [Luthadel] taking 7 days to arrive XXXXXXX
 
@@ -1604,3 +1604,32 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
       
 ++++Session 67
     Reminders: 8 hours rest in [Acheron] means the material realm folk can do 8 hours worth of actions before the [Acheron] folks wake up       
+    
+    Briar continues pushing cube
+    
+    Maleah goes to south market
+      -6 more drunks die fighting against 5 more Koloss
+      -Matkina, Callistege, Bloomin Orchid, and surviving drunks head back to gorda with a plundered barrel of poor quality beer
+      
+    Maleah and Briar meet up at the sound end of the water channel in [Luthadel] and continue to push the Portal to Acheron cube into the lake of [Kunark]
+      -Maleah fabricates a one room shack for Briar and Maleah to rest in
+      -Maleah contacts Vaprak to find out where her friends are, then casts a sending spell to plosive Plosive
+      
+    Doot and Plosive through Acheron:
+      -jump to the next cube with 7 followers of Kadi with Jeff the Koloss
+      -3 followers of kadi are slain
+      -Doot kills Jeff with the final blow and claims to be the daughter of night after using a booming voice to claim that he's Kadi's chosen one
+      -Plosive claims to be the grandaughter of night
+      
+    Brair dispells the lvl9 magic of the Cube portal to Acheron that was pushed to the lake of [Kunark]
+    
+    [Kaylin] + [Cael Caemond] have been at sea for 2 days trying to get to [Fiore] - 3 days until [Fiore]
+      -they have 1 day of food left
+      
+    [Maleah] goes to [Leeran]'s at [Luthadel] and purchases many spells and the components needed to copy them to her spellbook
+      -4 Lv1's, 3 Lv2's, 2 Lv3's
+      -[Briar] meets up with [Maleah] and they transport via plants to [Dun Morhen] near where they have parked the boat before
+      
+    [Doot] and [Plosive] make it to the Black Forge in the [Shadowfell]  
+      -escorted by 4 followers of [Kadi]  
+     
