--- a/data/Kadi.wiki
+++ b/data/Kadi.wiki
@@ -33,6 +33,9 @@ When released by the Year of the Skulls ritual
         -appears as a departed loved one to the summoner ([Thia] for [Croaker])
         -chains, mean, obedient
         
+++++Follower of Kadi
+  Knight       
+        
 ++++Kethra
   At the bottom of the mine in [Kaladim] (if the portal is open), sent here to die
   
