--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -1682,4 +1682,17 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
         -5 who were able to pay 10g to be followers of kadi
             
 ++++Session 69
-    Weenie beginning: Briar and Maleah will arrive at Fiore          
+    Weenie beginning: Briar and Maleah will arrive at Fiore 
+        [Fiore] was mid-way in a losing battle with the soldiers, inquisitors and order of steel brothers until suddenly all of the inquisitors dropped motionless. At which point the soldiers and brothers fled to their ships that refused to move. Knowing they had lost       
+        [Luthadel] casualties:  
+          30 inquisitors (dead)
+          18 brothers (15 survived, imprisoned)
+          120 soldiers (60 survived, imprisoned)
+          48 skaa ( 48 survived, imprisoned for questioning, to be sent to [Marine HQ] refugee area
+          6 metal warships (unable to move)
+        [Fiore] casualties:
+          40 soldiers
+          60 marines
+          12 Masons
+          10 Carpenters
+          1  (of 4) [Marines] officers (survivor is [Artin Torbera] (dwarf F))
